#excuse bg color fixed for contrast

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ h1{
 }
 
 #excuse{
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%) ;
+    background: linear-gradient(135deg, #bf3bce 0%, #f5576c 100%) ;
     color: white;
     padding: 30px;
     border-radius: 15px;
